Adding Profie Page

--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-/**********************************************
-*** GENERAL
-**********************************************/
+/* GENERAL*/
 
 * {
     margin: 0;
@@ -8,6 +6,22 @@
     box-sizing: border-box;
 }
 
+.footer {
+    padding: 2.5rem 0;
+    background: #f7fafc;
+  }
+  
+  .footer .nav .nav-item .nav-link {
+    color: #8898aa !important;
+  }
+  
+  .footer .nav .nav-item .nav-link:hover {
+    color: #525f7f !important;
+  }
+  
+  .footer .copyright {
+    font-size: .875rem;
+  }
 
 .clearfix::after {
     content: "";
@@ -29,9 +43,7 @@ body {
 .red { color: #FF5049 !important; }
 .red-focus:focus { border: 1px solid #FF5049 !important; }
 
-/**********************************************
-*** TOP PART
-**********************************************/
+/*TOP PART*/
 
 .top {
     height: 40vh;
@@ -111,11 +123,9 @@ body {
 }
 
 
-/**********************************************
-*** BOTTOM PART
-**********************************************/
+/*BOTTOM PART*/
 
-/***** FORM *****/
+/* FORM */
 .add {
     padding: 14px;
     border-bottom: 1px solid #e7e7e7;
@@ -178,7 +188,7 @@ body {
 
 .add__btn:focus { outline: none; }
 
-/***** LISTS *****/
+/* LISTS */
 .container {
     width: 1000px;
     margin: 60px auto;
